--- a/css/style.css
+++ b/css/style.css
@@ -413,7 +413,30 @@ a:focus, a:hover {
 
 .btn {
   text-transform: uppercase;
+  text-align: center;
 }
+.button {
+         display: inline-block;
+         margin-top: 10px;
+         margin-bottom: 20px;
+         padding: 15px 20px;
+         font-size: 20px;
+         border: none;
+         color: white;
+         font-weight: 500;
+         letter-spacing: 0.72px;
+         text-align: center;
+         border-radius: 15px;
+         text-decoration: none;
+         background-color: #0062cc;
+         color: #fff;
+         -webkit-transition: .8s cubic-bezier(.2,1,.2,1);
+         -o-transition: .8s cubic-bezier(.2,1,.2,1);
+         transition: .8s cubic-bezier(.2,1,.2,1);
+    }
+     .button {
+             font-size: 18px;
+           }
 
 .btn-download {
   padding: 20px 35px;
@@ -432,6 +455,7 @@ a:focus, a:hover {
   border-radius: 3px;
   background: #7d71d3;
   color: #fff;
+  background-color: #fff ;
   outline: none;
 }
 
