--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,28 @@ a:focus, a:hover {
      .button {
              font-size: 18px;
            }
+           .button1 {
+         display: inline-block;
+         margin-top: 10px;
+         margin-bottom: 20px;
+         padding: 15px 20px;
+         font-size: 20px;
+         border: none;
+         color: white;
+         font-weight: 500;
+         letter-spacing: 0.72px;
+         text-align: center;
+         border-radius: 15px;
+         text-decoration: none;
+         background-color: #ffffff;
+         color: #fff;
+         -webkit-transition: .8s cubic-bezier(.2,1,.2,1);
+         -o-transition: .8s cubic-bezier(.2,1,.2,1);
+         transition: .8s cubic-bezier(.2,1,.2,1);
+    }
+     .button1 {
+             font-size: 18px;
+           }
 
 .btn-download {
   padding: 20px 35px;
